--- a/about.html
+++ b/about.html
@@ -30,7 +30,8 @@
 				<ul>
 
 					<li><a class="nav-link active" href="about.html">ABOUT</a></li>
-					<li class="dropdown"><a class="nav-link" href="#"><span>Solutions</span><i class="bi bi-chevron-down"></i></a>
+					<li class="dropdown"><a class="nav-link" href="#"><span>Solutions</span><i
+								class="bi bi-chevron-down"></i></a>
 						<ul>
 							<li><a href="goals/transform-your-enterprise.html">Transform your enterprise
 								</a></li>
@@ -68,10 +69,12 @@
 	<section id="banner" class="d-flex flex-column justify-content-end align-items-center p-0"
 		style="background: url(assets/img/about.jpg);">
 		<div class="banner-container container about">
-			<p class="subtext">About Us</p>
-			<h1>Committed to continuous improvement
+
+			<h1>Committed to Continuous Improvement.
+
 			</h1>
-			<p>Your partner from day one</p>
+			<p>Co-investing in your success.
+			</p>
 		</div>
 		</div>
 	</section>
@@ -82,15 +85,16 @@
 				<div class="row content">
 					<div class="col-xl-12">
 						<p>
-							Torinit exists to serve mid-market companies on their path to success. We’re more than consultants — we’re
-							full partners
-							in your journey to solving critical business problems and charting desirable futures. We pride ourselves
-							in becoming
-							incredibly attached to your projects, taking time to deeply understand your challenges and building
-							empathy with your
-							consumers. We don’t believe in blanket solutions, but work relentlessly to deliver customized services
-							that drive
-							transformational growth.
+							Torinit exists to assist mid-market enterprises to shape their path to digitally enabled
+							success. We’re
+							more than
+							digital consultants - we’re full partners in your journey to solving critical business
+							challenges and
+							achieving
+							desirable success. We pride ourselves in becoming incredibly attached to your projects,
+							taking time to
+							deeply understand
+							your challenges.
 
 						</p>
 					</div>
@@ -118,15 +122,14 @@
 					<div class="col-md-4">
 						<div class="contentbox">
 							<h3>$20M+</h3>
-							<p>Operational Cost
-								Savings</p>
+							<p>Enabled in operational cost savings.</p>
 						</div>
 					</div>
 					<div class="col-md-4">
 						<div class="contentbox">
 							<h3>100+</h3>
 							<p>Team members across
-								the world</p>
+								the world.</p>
 						</div>
 					</div>
 				</div>
@@ -140,7 +143,8 @@
 					<div class="col-12">
 						<div class="section-title">
 							<div class="subtext">OUR VISION</div>
-							<h2>Unlock the true potential of every organization through innovation and consistent improvement.
+							<h2>Democratizing technology for mid-market enterprises.
+
 							</h2>
 						</div>
 					</div>
@@ -160,16 +164,21 @@
 				<div class="row content">
 					<div class="col-xl-12">
 						<p class="mb-0">
-							Torinit was founded in 2016 as a software development firm to fill a gap in the digital ecosystem. Unlike
+							Torinit was founded in 2016 as a software development firm to fill a gap in the digital
+							ecosystem. Unlike
 							other service
-							providers, we’ve always placed our clients’ long-term success at the heart of everything we do, working
+							providers, we’ve always placed our clients’ long-term success at the heart of everything we
+							do, working
 							from a place of
-							transparency and absolute commitment to our business relationships. This ethos has helped us evolve into a
+							transparency and absolute commitment to our business relationships. This ethos has helped us
+							evolve into a
 							fast-growing
-							strategic partner with consulting, strategy and design operations in Toronto, and core engineering offices
+							strategic partner with consulting, strategy and design operations in Toronto, and core
+							engineering offices
 							in Pune,
-							India. We’ve since built game-changing digital solutions for market leaders across industries,
-							facilitating over $200
+							India. We’ve since built game-changing digital solutions for market leaders across
+							industries,
+							facilitating over $250
 							million in revenue enablement and $20 million in operational savings.
 
 
@@ -188,19 +197,21 @@
 					<div class="col-md-4">
 						<div class="whitebgbox">
 							<h3>Empathy</h3>
-							<p>Humans First</p>
+							<p>Humans First.</p>
 						</div>
 					</div>
 					<div class="col-md-4">
 						<div class="whitebgbox">
 							<h3>Accountability</h3>
-							<p>Leading with Clarity</p>
+							<p>Leading with Clarity.
+							</p>
 						</div>
 					</div>
 					<div class="col-md-4">
 						<div class="whitebgbox">
 							<h3>Reliability</h3>
-							<p>There when you need us</p>
+							<p>There when you need us.
+							</p>
 						</div>
 					</div>
 				</div>
@@ -225,83 +236,47 @@
 			</div>
 		</section>
 		<!--end Defined by our people-->
-		<section class="goal contentonly">
+		<section class="pb-0 pt-0">
 			<div class="container container-xs">
 
 
-				<div class="row">
-					<div class="columnbox3">
-						<div class="hoverbox">
-
-							<div class="content-title">
-								<h3>Moral</h3>
-							</div>
-							<p>We believe that progress is achieved when everyone is moving together in the same direction. We
-								strive to better the
-								world by bettering the companies and people responsible for the future.</p>
-						</div>
-					</div>
-					<div class="columnbox3">
-						<div class="hoverbox">
-
-							<div class="content-title">
-								<h3>Deep thinkers
-								</h3>
-							</div>
-							<p>We’re not afraid of the hard questions. Our willingness to go the extra mile and consider every
-								single variable leads us
-								to the best solution — not just a solution.</p>
-						</div>
-					</div>
-					<div class="columnbox3">
-						<div class="hoverbox">
-
-							<div class="content-title">
-								<h3>Empathetic</h3>
-							</div>
-							<p>We see the world through our clients’ eyes and build layers of empathy with their consumers to
-								create human-centric
-								solutions.</p>
-						</div>
-					</div>
-					<div class="columnbox3">
-						<div class="hoverbox">
-
-							<div class="content-title">
-								<h3>Dependable
-
-								</h3>
-							</div>
-							<p>We’re not a vendor, we’re a partner. We’re not service providers, we’re problem-solvers. Whatever
-								challenge you face,
-								we’ll invest our full selves in finding the way forward.</p>
-						</div>
-					</div>
-					<div class="columnbox3">
-						<div class="hoverbox">
-
-							<div class="content-title">
-								<h3>Inventive
-
-								</h3>
-
-							</div>
-							<p>We don’t believe in one-size-fits-all solutions. Rather, we approach every problem with an
-								innovative spirit to deliver
-								the best solutions.</p>
+				<div class="row masonry-layout no-content">
+					<div class="col-md-6 col-lg-4">
+						<div class="contentbluebox">
+							<h3>Moral
+							</h3>
 
 						</div>
 					</div>
-					<div class="columnbox3">
-						<div class="hoverbox">
+					<div class="col-md-6 col-lg-4">
+						<div class="contentbluebox">
+							<h3>Deep Thinkers
+							</h3>
 
-							<div class="content-title">
-								<h3>Valuable
-								</h3>
-							</div>
-							<p>Success isn’t measured in dollars or starred reviews, but in our ability to propel our clients into
-								the future with
-								every thought, milestone and project.</p>
+						</div>
+					</div>
+
+					<div class="col-md-6 col-lg-4">
+						<div class="contentbluebox">
+							<h3>Empathetic</h3>
+
+						</div>
+					</div>
+					<div class="col-md-6 col-lg-4">
+						<div class="contentbluebox ">
+							<h3>Dependable</h3>
+
+						</div>
+					</div>
+					<div class="col-md-6 col-lg-4">
+						<div class="contentbluebox ">
+							<h3>Inventive</h3>
+
+						</div>
+					</div>
+					<div class="col-md-6 col-lg-4">
+						<div class="contentbluebox ">
+							<h3>Valuable</h3>
 
 						</div>
 					</div>
@@ -310,51 +285,127 @@
 			</div>
 		</section>
 		<!--Subject matter experts-->
-		<section class="description">
+		<section class="goal contentonly">
 			<div class="container container-xs">
-				<div class="section-title">
-					<h2>Subject matter experts</h2>
+				<div class="section-title black">
+					<h2>Subject Matter Expertise</h2>
+				</div>
+				<div class="row">
+					<div class="columnbox3">
+						<div class="hoverbox">
+
+							<div class="content-title">
+								<h3>Strategy & Insights (S&I)
+								</h3>
+							</div>
+							<p>Strategic analysis on technology implementations is the first key step in building a
+								digital
+								transformation roadmap. Our
+								S&I team is able to analyze potential results of planned implementations that range from
+								ROI, RTS,
+								Productivity
+								increases, brand value uplift among other important evaluation metrics. Our S&I team
+								specializes in
+								defining core
+								success criteria for each digital initiative.</p>
+							<p class="text-italic">Toronto, Canada
+							</p>
+						</div>
+					</div>
+					<div class="columnbox3">
+						<div class="hoverbox">
+
+							<div class="content-title">
+								<h3>Product Management
+								</h3>
+							</div>
+							<p>The intersection between business and technology needs to be managed meticulously to
+								drive desired
+								results. Our Product
+								management practice oversees the entire product lifecycle starting from planning and
+								architecture to
+								measuring business
+								performance post implementation of products and initiatives.</p>
+							<p class="text-italic"> Toronto, Canada</p>
+						</div>
+					</div>
+					<div class="columnbox3">
+						<div class="hoverbox">
+
+							<div class="content-title">
+								<h3>Digital Product Design</h3>
+							</div>
+							<p>Designing experiences and interfaces for a better enterprise. Our design team specializes
+								in converting
+								business
+								requirements into workflows, user experiences, and UI designs that users cherish.</p>
+							<p class="text-italic">Toronto, Canada
+							</p>
+						</div>
+					</div>
+					<div class="columnbox3">
+						<div class="hoverbox">
+
+							<div class="content-title">
+								<h3>Engineering & QA
+
+								</h3>
+							</div>
+							<p>Developing state of the art applications that are robust, reliable and scalable. Our
+								engineering team
+								has solved some of
+								the biggest challenges faced by enterprises over the past decade.</p>
+							<p class="text-italic">Pune, Mumbai, and Nagpur, India
+
+							</p>
+						</div>
+					</div>
+					<div class="columnbox3">
+						<div class="hoverbox">
+
+							<div class="content-title">
+								<h3>Delivery Management
+
+
+								</h3>
+
+							</div>
+							<p>Ensuring successful on time, on budget implementations is a key advantage of working with
+								an
+								accountable digital
+								partner. Our delivery practice specializes in following best practices that mitigates
+								risks of delayed,
+								over budget, and
+								unsuccessful deliveries.
+							</p>
+							<p class="text-italic">Pune, India
+
+
+							</p>
+
+						</div>
+					</div>
+					<div class="columnbox3">
+						<div class="hoverbox">
+
+							<div class="content-title">
+								<h3>DevOps Management
+
+								</h3>
+							</div>
+							<p>Planning, developing, packaging, and releasing software products is as complicated as
+								physical products. Managing these
+								operations is key to productive delivery teams that operate on optimal velocity. Our
+								DevOps team ensures that all
+								solutions are developed & deployed optimally.</p>
+							<p class="text-italic">Pune, India
+
+
+							</p>
+						</div>
+					</div>
 				</div>
 
-				<div class="row masonry-layout no-content">
-					<div class="col-md-6 col-lg-4">
-						<div class="contentbluebox">
-							<h3>Strategy & Insights</h3>
-
-						</div>
-					</div>
-					<div class="col-md-6 col-lg-4">
-						<div class="contentbluebox">
-							<h3>Product Management</h3>
-
-						</div>
-					</div>
-					<div class="col-md-6 col-lg-4">
-						<div class="contentbluebox">
-							<h3>Digital Product Design</h3>
-
-						</div>
-					</div>
-					<div class="col-md-6 col-lg-4">
-						<div class="contentbluebox">
-							<h3>Engineering & QA</h3>
-
-						</div>
-					</div>
-					<div class="col-md-6 col-lg-4">
-						<div class="contentbluebox">
-							<h3>Product Marketing</h3>
-
-						</div>
-					</div>
-					<div class="col-md-6 col-lg-4">
-						<div class="contentbluebox">
-							<h3>Delivery & DevOps</h3>
-
-						</div>
-					</div>
-
-				</div>
 			</div>
 		</section>
 		<!--end Subject matter experts-->
@@ -401,7 +452,7 @@
 		<section class="cta">
 			<div class="container container-xs">
 				<div class="row content">
-					<div class="col-md-8">
+					<div class="col-md-8 align-self-center">
 						<h3>Connect with us to learn more
 
 						</h3>
