--- a/career.html
+++ b/career.html
@@ -192,31 +192,35 @@
 						</div>
 					</div>
 
-					<div class="description">
-						<div class="section-title blue">
-							<h2>The Torinit Advantage
-							</h2>
-						</div>
 
-						<div class="content">
-							<p class="mb-0">We offer a range of benefits including competitive salaries, health and
-								dental, and
-								extended holiday
-								weekends, so that
-								you can take care of yourself and your family. You’ll also have access to training
-								programs to learn
-								new
-								skills and
-								advance your career. We’ll be operating on a hybrid work model post-pandemic.
-							</p>
-						</div>
-
-					</div>
 				</div>
 			</div>
 		</section>
 		<!--end Opportunies-->
+		<section class="description pt-0">
+			<div class="container container-xs">
+				<div class="description">
+					<div class="section-title blue">
+						<h2>The Torinit Advantage
+						</h2>
+					</div>
 
+					<div class="content">
+						<p class="mb-0">We offer a range of benefits including competitive salaries, health and
+							dental, and
+							extended holiday
+							weekends, so that
+							you can take care of yourself and your family. You’ll also have access to training
+							programs to learn
+							new
+							skills and
+							advance your career. We’ll be operating on a hybrid work model post-pandemic.
+						</p>
+					</div>
+
+				</div>
+			</div>
+		</section>
 		<!--location-->
 		<section class="location">
 			<div class="container container-xs description">
@@ -260,7 +264,7 @@
 		<section class="cta">
 			<div class="container container-xs">
 				<div class="row content">
-					<div class="col-md-8">
+					<div class="col-md-8 align-self-center">
 						<h3>Connect with us to learn more</h3>
 					</div>
 					<div class="col-md-4 align-self-center">
