--- a/goals/accelerate-sales.html
+++ b/goals/accelerate-sales.html
@@ -70,7 +70,7 @@
 
 			<h1>Accelerate sales
 			</h1>
-			<p>Nurture lasting relationships and cultivate engagement by refining end-to-end customer journeys.
+			<p>Product - Digital Distribution - Market Fit.
 			</p>
 		</div>
 		</div>
@@ -81,17 +81,21 @@
 		<section class="approach">
 			<div class="container container-xs">
 				<div class="section-title">
-					<h2>Our approach to enabling greater sales</h2>
+					<h2>Our approach to enabling greater revenues
+
+					</h2>
 				</div>
 				<div class="row content">
 					<div class="col-md-12">
-						<p>Customer preferences and expectations change fast. To remain competitive, companies must
-							constantly
-							refine their
-							experiences and provide seamless interactions that keep visitors coming back. We help you
-							remove all
-							barriers to
-							purchase, increase accessibility, and find new ways to build loyalty.
+						<p>Consistently monitoring market trends to stay on top of consumer demands and competition is
+							difficult for enterprises.
+							We partner with enterprises to conduct deep customer research, and align findings with sales
+							pipeline, product offering,
+							product positioning, and digital distribution. We assist enterprises stay ahead of
+							competition by driving best in class
+							digital campaigns that always provide first movers advantage.
+
+
 						</p>
 					</div>
 				</div>
@@ -100,20 +104,11 @@
 						<div class="step">
 							<img src="../assets/img/steps.svg">
 							<div class="content">
+								<h3>Step 1</h3>
+								<p>Understand your ecosystem, sales funnel, previous sales data, product suite,
+									competitors, search dominance, among other
+									significant variables.
 
-								<p>Evaluate existing acquisition funnels at each touchpoint.
-
-								</p>
-							</div>
-						</div>
-					</div>
-					<div class="col-md-4">
-						<div class="step">
-							<img src="../assets/img/steps.svg">
-							<div class="content">
-
-								<p>Identify areas of leakage, drop-offs, customer confusion, and competitive
-									disadvantage.
 
 								</p>
 							</div>
@@ -123,8 +118,10 @@
 						<div class="step">
 							<img src="../assets/img/steps.svg">
 							<div class="content">
+								<h3>Step 2</h3>
+								<p>Identify new digital platforms, tools, and technologies to capture qualified
+									customers.
 
-								<p>Uncover the causes of drop-offs, and evaluate solutions.
 
 								</p>
 							</div>
@@ -134,8 +131,9 @@
 						<div class="step">
 							<img src="../assets/img/steps.svg">
 							<div class="content">
+								<h3>Step 3</h3>
+								<p>Validate hypothesis with cross industry successful precedents from around the world.
 
-								<p>Conduct pilot tests with specific customer types.
 								</p>
 							</div>
 						</div>
@@ -144,8 +142,35 @@
 						<div class="step">
 							<img src="../assets/img/steps.svg">
 							<div class="content">
+								<h3>Step 4</h3>
+								<p>Create front-end digital experiences that integrate directly into the sales funnel.
 
-								<p>Implement, test and refine
+								</p>
+							</div>
+						</div>
+					</div>
+					<div class="col-md-4">
+						<div class="step">
+							<img src="../assets/img/steps.svg">
+							<div class="content">
+								<h3>Step 5</h3>
+								<p>Monitor, learn, amend digital tools to capture optimal parts of the market.
+
+								</p>
+							</div>
+						</div>
+					</div>
+
+					<div class="col-md-4">
+						<div class="step">
+							<img src="../assets/img/steps.svg">
+							<div class="content">
+								<h3>Step 6</h3>
+								<p>Continue to identify and test greenfield acquisition, adoption, and retention digital
+									tools to always keep prospects
+									engaged in the sales process.
+
+
 								</p>
 							</div>
 						</div>
@@ -169,12 +194,13 @@
 			<div class="container-fluid p-0">
 				<div class="row">
 					<!--service-1-->
-					<div class="bluebox">
-						<div class="bluebox d-block d-md-none">
-							<div class="imagecontent">
-								<img src="../assets/img/home/services/digital-tranformation.png">
-							</div>
+
+					<div class="bluebox d-block d-md-none">
+						<div class="imagecontent">
+							<img src="../assets/img/home/services/digital-tranformation.png">
 						</div>
+					</div>
+					<div class="bluebox">
 						<div class="content">
 							<h3>Digital Transformation</h3>
 							<p>Digital First Organizations have experienced tremendous growth in the last decade. We
@@ -186,7 +212,7 @@
 								art digital technologies.
 							</p>
 							<a href="../services/digital-transformation.html" class="btn-learn-more stretched-link">
-								<i class="bi bi-arrow-right"></i> </a>
+								Learn More</a>
 						</div>
 					</div>
 					<div class="bluebox d-none d-md-block">
@@ -205,16 +231,14 @@
 					<div class="bluebox">
 						<div class="content">
 							<h3>Product Development</h3>
-							<p>Digital products, internal or consumer facing, have become a prominent source of
-								information
-								distribution today.
-								Enabling customer success, accelerating revenues, controlling costs are all possible
-								through appropriate
-								digital product
-								strategy, development and distribution.
+							<p>Digital products have become a prominent source of information distribution today. Strategically built
+								products enable
+								customer success, acceleration of revenues, controlling of costs. Torinit has accumulated a significant
+								body of
+								knowledge in the area of product development, and enabled many enterprises to build better products.
 							</p>
 							<a href="../services/product-development.html" class="btn-learn-more stretched-link">
-								<i class="bi bi-arrow-right"></i> </a>
+								Learn More</a>
 						</div>
 					</div>
 					<!--end-->
@@ -227,16 +251,14 @@
 						</div>
 						<div class="content">
 							<h3>Experience Design</h3>
-							<p>Creating or improving meaningful experiential journeys for your customers, consumers,
+							<p>Creating meaningful experiences for your customers, consumers (often different from customers), and
 								employees has a
-								direct correlation
-								with the health of your enterprise both financially and qualitatively. Invest in
-								seamless experiences to
-								realize the
-								true potential of their value chain.
+								direct correlation with the health of your enterprise; both financially and qualitatively. At Torinit,
+								we have built
+								state of the art design systems for various business applications that have benefited our customers.
 							</p>
 							<a href="../services/experience-design.html" class="btn-learn-more stretched-link">
-								<i class="bi bi-arrow-right"></i> </a>
+								Learn More</a>
 						</div>
 					</div>
 					<div class="bluebox d-none d-md-block">
@@ -256,7 +278,7 @@
 		<section class="cta">
 			<div class="container container-xs">
 				<div class="row content">
-					<div class="col-md-8">
+					<div class="col-md-8 align-self-center">
 						<h3>Connect with us to learn more</h3>
 					</div>
 					<div class="col-md-4 align-self-center">
