--- a/goals/build-better-products.html
+++ b/goals/build-better-products.html
@@ -69,10 +69,9 @@
 	<section id="banner" class="d-flex flex-column justify-content-end align-items-center p-0 goal-banner-2">
 		<div class="banner-container container">
 
-			<h1>Build better products</h1>
-			<p>Uncover new sources of value and boost product development by developing consistent, highly effective and
-				inspirational
-				experiences enabled by state-of-the-art design systems.
+			<h1>Torinit is a product development powerhouse.</h1>
+			<p>Strategy. Product Management. Design. Engineering. QA. Delivery. DevOps.
+
 
 			</p>
 		</div>
@@ -84,88 +83,148 @@
 		<section class="approach">
 			<div class="container container-xs">
 				<div class="section-title">
-					<h2>Our approach to building better products</h2>
+					<h2>Our Approach to building better products
+					</h2>
 				</div>
 				<div class="row content">
 					<div class="col-md-12">
-						<p>Exceptional experiences are powered by great design. We help you scale the impact of your CX
-							strategy by
-							building robust
-							design systems so that you can create replicable, intuitive and delightful experiences
-							across platforms.
-							With unified
-							guidelines to work with, your team will achieve greater collaboration and take your products
-							to new
-							heights.
+						<p>We follow an objectives and key results (OKR) driven approach to product development. We
+							believe in setting clear
+							business objectives with measurable outcomes that are set, tracked, and re-evaluated
+							throughout the development process.
+							OKR driven approach enables us to clearly define themes, epics, stories, tasks and their
+							acceptance criterias early on
+							in the product development lifecycle.
+
 						</p>
 					</div>
 				</div>
-				<div class="row steps">
-
-					<div class="col-md-4">
+				<!-- <div class="row steps">
+					<div class="col-lg-4 col-md-6">
 						<div class="step">
 							<img src="../assets/img/steps.svg">
 							<div class="content">
-
-								<p>Understand your core market and people that make the marke
-								</p>
-							</div>
-						</div>
-					</div>
-					<div class="col-md-4">
-						<div class="step">
-							<img src="../assets/img/steps.svg">
-							<div class="content">
-
-								<p>Empathize with your market's aspirations, concerns, preferences, and limitations.
-
-								</p>
-							</div>
-						</div>
-					</div>
-					<div class="col-md-4">
-						<div class="step">
-							<img src="../assets/img/steps.svg">
-							<div class="content">
-
-								<p>Map their journeys, drafting an ideal on-screen experience optimized for attention
-									and action.
-								</p>
-							</div>
-						</div>
-					</div>
-					<div class="col-md-4">
-						<div class="step">
-							<img src="../assets/img/steps.svg">
-							<div class="content">
-
-								<p>Design interactions built around human needs and behaviours.
+								<h3>Product Development Approach
+								</h3>
+								<p>Working Backwards Framework - Developed by Amazon, a product development framework in
+									which we would write a description
+									of the end product on day one like we would on launch day. We provide the written
+									description of the product to the
+									potential core audience to gather their feedback. This governs us to only build
+									features that will be truly valuable to
+									the user.
 
 								</p>
 							</div>
 						</div>
 					</div>
-					<div class="col-md-4">
+					<div class="col-lg-4 col-md-6">
 						<div class="step">
 							<img src="../assets/img/steps.svg">
 							<div class="content">
+								<h3>Prioritization Frameworks
+								</h3>
+								<p>Value vs. Complexity - This framework enables our team with an objective framework to
+									determine which initiatives to prioritize on the roadmap. The team scores each
+									feature according to how much value it will bring to the product and its level of
+									difficulty to implement.
 
-								<p>Conduct extensive user testing and gather feedback
-								</p>
-							</div>
-						</div>
-					</div>
-					<div class="col-md-4">
-						<div class="step">
-							<img src="../assets/img/steps.svg">
-							<div class="content">
-
-								<p>Implement the design system, measure impact and iterate.
 
 								</p>
 							</div>
 						</div>
 					</div>
+					<div class="col-lg-4 col-md-6">
+						<div class="step">
+							<img src="../assets/img/steps.svg">
+							<div class="content">
+								<h3>UX/Design Frameworks
+								</h3>
+								<p>Design thinking is a framework that allows us to always view everything from the
+									user’s point of view. It is the most
+									human-centred approach to building products.
+
+								</p>
+							</div>
+						</div>
+					</div>
+					<div class="col-lg-4 col-md-6">
+						<div class="step">
+							<img src="../assets/img/steps.svg">
+							<div class="content">
+								<h3>Agile Product Management Frameworks
+								</h3>
+								<p>Lean Software Development Model - Originally called the Toyota Production System,
+									this framework allows us to deliver
+									core functions of a product with utmost speed, and agility. Often enabling us to get
+									a lot of user feedback early on
+									that helps in organizing the future roadmap that reflects real user feedback.
+								</p>
+							</div>
+						</div>
+					</div>
+				</div> -->
+
+
+				<div class=" worldaround pt-0 pb-0" style="background: #fff;">
+					<div class="row largedata ">
+						<div class="col-lg-12 col-md-6">
+							<div class="contentbox largeboxesfirst">
+								<h3>Product Development Approach
+								</h3>
+								<p>Working Backwards Framework - Developed by Amazon, a product development framework in which we
+									would write a description
+									of the end product on day one like we would on launch day. We provide the written description of the
+									product to the
+									potential core audience to gather their feedback. This governs us to only build features that will
+									be truly valuable to
+									the user.
+
+								</p>
+							</div>
+						</div>
+
+						<div class="col-lg-4 col-md-6">
+							<div class="contentbox largeboxes">
+								<h3>Prioritization Frameworks</h3>
+								<p>Value vs. Complexity - This framework enables our team with an objective framework to determine
+									which initiatives to
+									prioritize on the roadmap. The team scores each feature according to how much value it will bring to
+									the product and its
+									level of difficulty to implement.
+
+								</p>
+							</div>
+						</div>
+						<div class="col-lg-4 col-md-6">
+							<div class="contentbox largeboxes">
+								<h3>UX/Design Frameworks
+								</h3>
+								<p>Design thinking is a framework that allows us to always view everything from the user’s point of
+									view. It is the most
+									human-centred approach to building products.
+
+								</p>
+							</div>
+						</div>
+
+						<div class="col-lg-4 col-md-6">
+							<div class="contentbox largeboxes">
+								<h3>Agile Product Management Frameworks
+								</h3>
+								<p>Lean Software Development Model - Originally called the Toyota Production System, this framework
+									allows us to deliver
+									core functions of a product with utmost speed, and agility. Often enabling us to get a lot of user
+									feedback early on
+									that helps in organizing the future roadmap that reflects real user feedback.
+
+
+								</p>
+							</div>
+						</div>
+
+					</div>
+
 				</div>
 			</div>
 			</div>
@@ -194,46 +253,19 @@
 					<div class="bluebox">
 						<div class="content">
 							<h3>Product Development</h3>
-							<p>Digital products, internal or consumer facing, have become a prominent source of
-								information
-								distribution today.
-								Enabling customer success, accelerating revenues, controlling costs are all possible
-								through appropriate
-								digital product
-								strategy, development and distribution.
+							<p>Digital products have become a prominent source of information distribution today.
+								Strategically built products enable
+								customer success, acceleration of revenues, controlling of costs. Torinit has
+								accumulated a significant body of
+								knowledge in the area of product development, and enabled many enterprises to build
+								better products.
 							</p>
 							<a href="../services/product-development.html" class="btn-learn-more stretched-link">
-								<i class="bi bi-arrow-right"></i> </a>
+								learn more </a>
 						</div>
 					</div>
 					<!--end-->
-					<!--service-3-->
-					<div class="bluebox">
-						<div class="bluebox d-block d-md-none">
-							<div class="imagecontent">
-								<img src="../assets/img/home/services/experience-design.png">
-							</div>
-						</div>
-						<div class="content">
-							<h3>Experience Design</h3>
-							<p>Creating or improving meaningful experiential journeys for your customers, consumers,
-								employees has a
-								direct correlation
-								with the health of your enterprise both financially and qualitatively. Invest in
-								seamless experiences to
-								realize the
-								true potential of their value chain.
-							</p>
-							<a href="../services/experience-design.html" class="btn-learn-more stretched-link">
-								<i class="bi bi-arrow-right"></i> </a>
-						</div>
-					</div>
-					<div class="bluebox d-none d-md-block">
-						<div class="imagecontent">
-							<img src="../assets/img/home/services/experience-design.png">
-						</div>
-					</div>
-					<!--end-->
+
 
 
 
@@ -245,7 +277,7 @@
 		<section class="cta">
 			<div class="container container-xs">
 				<div class="row content">
-					<div class="col-md-8">
+					<div class="col-md-8 align-self-center">
 						<h3>Connect with us to learn more</h3>
 					</div>
 					<div class="col-md-4 align-self-center">
