--- a/goals/improve-digital-experiences.html
+++ b/goals/improve-digital-experiences.html
@@ -154,16 +154,15 @@
 				</div>
 				<div class="row content">
 					<div class="col-md-12">
-						<p>To remain relevant, businesses must understand how to meet and adapt to their customers’
-							changing needs.
-							We help you
-							build or refine winning experiences that drive brand loyalty at every touchpoint, and align
-							stakeholders
-							behind common
-							objectives. By adopting great CX practices, you’ll be able to deliver highly engaging user
-							journeys that
-							drive
-							retention, and eliminate barriers to financial performance.
+						<p>To remain relevant, businesses must understand how to meet and adapt to their customers’ evolving needs.
+							We assist you
+							build winning experiences that drive brand loyalty at every touchpoint, and align with each stakeholders
+							motivations. By
+							adopting stellar CX, UX, and UI practices, we deliver highly engaging user journeys that drive
+							acquisition, adoption,
+							retention, and minimize barriers to usability directly benefiting the financial performance of the
+							business.
+
 						</p>
 					</div>
 				</div>
@@ -172,19 +171,10 @@
 						<div class="step">
 							<img src="../assets/img/steps.svg">
 							<div class="content">
+								<h3>Step 1</h3>
+								<p>Understand all your stakeholders, and their various motivations and purposes in regards to your
+									business offering.
 
-								<p>Map and review the existing customer experience.
-
-								</p>
-							</div>
-						</div>
-					</div>
-					<div class="col-md-4">
-						<div class="step">
-							<img src="../assets/img/steps.svg">
-							<div class="content">
-
-								<p>Analyse customer expectations, legal obligations, and governance changes.
 
 								</p>
 							</div>
@@ -194,28 +184,11 @@
 						<div class="step">
 							<img src="../assets/img/steps.svg">
 							<div class="content">
+								<h3>Step 2</h3>
+								<p>Audit existing journeys experienced by each stakeholder to identify points of friction, unnecessary
+									steps, or
+									overwhelmed information flows identifying experience debt.
 
-								<p>Review cross-industry leading trends and benchmarks.
-								</p>
-							</div>
-						</div>
-					</div>
-					<div class="col-md-4">
-						<div class="step">
-							<img src="../assets/img/steps.svg">
-							<div class="content">
-
-								<p>Map out a desired user journey with minimal friction
-								</p>
-							</div>
-						</div>
-					</div>
-					<div class="col-md-4">
-						<div class="step">
-							<img src="../assets/img/steps.svg">
-							<div class="content">
-
-								<p>Architect, design, build and test for usability.
 
 								</p>
 							</div>
@@ -225,8 +198,51 @@
 						<div class="step">
 							<img src="../assets/img/steps.svg">
 							<div class="content">
+								<h3>Step 3</h3>
+								<p>Researching experience provided by industry leaders and identifying business processes that enable
+									better experience
+									delivery.
 
-								<p>Implement and iterate
+								</p>
+							</div>
+						</div>
+					</div>
+					<div class="col-md-4">
+						<div class="step">
+							<img src="../assets/img/steps.svg">
+							<div class="content">
+								<h3>Step 4</h3>
+								<p>Analyzing impact on your business if best practices were to be applied to deliver better experience
+									to your
+									stakeholders.
+
+								</p>
+							</div>
+						</div>
+					</div>
+					<div class="col-md-4">
+						<div class="step">
+							<img src="../assets/img/steps.svg">
+							<div class="content">
+								<h3>Step 5</h3>
+								<p>Creating a few improved stakeholder journeys to run pre-development sensitivity tests with a segment
+									of your core
+									audience.
+
+
+								</p>
+							</div>
+						</div>
+					</div>
+					<div class="col-md-4">
+						<div class="step">
+							<img src="../assets/img/steps.svg">
+							<div class="content">
+								<h3>Step 6</h3>
+								<p>Building a design system that works best for your audiences, and head to developing experiences on
+									the defined design
+									system.
+
 								</p>
 							</div>
 						</div>
@@ -249,24 +265,23 @@
 			<div class="container-fluid p-0">
 
 				<div class="row">
-					<div class="bluebox">
-						<div class="bluebox d-block d-md-none">
-							<div class="imagecontent">
-								<img src="../assets/img/home/services/experience-design.png">
-							</div>
+
+					<div class="bluebox d-block d-md-none">
+						<div class="imagecontent">
+							<img src="../assets/img/home/services/experience-design.png">
 						</div>
+					</div>
+					<div class="bluebox">
 						<div class="content">
 							<h3>Experience Design</h3>
-							<p>Creating or improving meaningful experiential journeys for your customers, consumers,
+							<p>Creating meaningful experiences for your customers, consumers (often different from customers), and
 								employees has a
-								direct correlation
-								with the health of your enterprise both financially and qualitatively. Invest in
-								seamless experiences to
-								realize the
-								true potential of their value chain.
+								direct correlation with the health of your enterprise; both financially and qualitatively. At Torinit,
+								we have built
+								state of the art design systems for various business applications that have benefited our customers.
 							</p>
 							<a href="../services/experience-design.html" class="btn-learn-more stretched-link">
-								<i class="bi bi-arrow-right"></i> </a>
+								Learn More </a>
 						</div>
 					</div>
 					<div class="bluebox d-none d-md-block">
@@ -282,7 +297,7 @@
 		<section class="cta">
 			<div class="container container-xs">
 				<div class="row content">
-					<div class="col-md-8">
+					<div class="col-md-8 align-self-center">
 						<h3>Connect with us to learn more</h3>
 					</div>
 					<div class="col-md-4 align-self-center">
