--- a/goals/optimize-operations.html
+++ b/goals/optimize-operations.html
@@ -70,9 +70,8 @@
 		<div class="banner-container container">
 
 			<h1>Optimize operations</h1>
-			<p>Unlock efficiency and increase performance by reimagining your operational model with human-centricity at
-				the
-				core.
+			<p>Build technologies to assist and automate workflows to realize recurring operational savings.
+
 
 			</p>
 		</div>
@@ -84,21 +83,20 @@
 		<section class="approach">
 			<div class="container container-xs">
 				<div class="section-title">
-					<h2>Our approach to productizing stellar operations
+					<h2>Our approach to optimizing workflows
+
 					</h2>
 				</div>
 				<div class="row content">
 					<div class="col-md-12">
-						<p>Leverage technology with organization-wide transformation. We take a holistic approach to
-							digitization,
-							targeting
-							high-impact improvements that deliver value to the whole enterprise. Our goal is to help you
-							adopt leaner,
-							more agile
-							workflows so that your team and customers can focus on high-value tasks. Your business
-							becomes smarter,
-							more efficient,
-							and ready for the future.
+						<p>Analyzing financial statements provides enterprises with areas that could be made more
+							productive or inexpensive. Such
+							areas often could be improved or automated with use of latest technologies and tools
+							resulting in improved workflows. We
+							start by identifying high impact workflow improvement areas and build micro solutions to
+							deliver initial impact swiftly
+							prior to undertaking holistic transformation to optimize operations.
+
 						</p>
 					</div>
 				</div>
@@ -107,20 +105,11 @@
 						<div class="step">
 							<img src="../assets/img/steps.svg">
 							<div class="content">
+								<h3>Step 1</h3>
+								<p>Identify high financial impact workflow improvements that currently have error-prone
+									manual inputs involved, with
+									potential to be automated or assisted with digital solutions.
 
-								<p>Identify your top operational expenses.
-
-								</p>
-							</div>
-						</div>
-					</div>
-					<div class="col-md-4">
-						<div class="step">
-							<img src="../assets/img/steps.svg">
-							<div class="content">
-
-								<p>Map related workflows and identify opportunities for cost-optimization through
-									digitization.
 
 								</p>
 							</div>
@@ -130,19 +119,10 @@
 						<div class="step">
 							<img src="../assets/img/steps.svg">
 							<div class="content">
-
-								<p>Design improved workflows, clarify business impact and define success criteria.
-
-								</p>
-							</div>
-						</div>
-					</div>
-					<div class="col-md-4">
-						<div class="step">
-							<img src="../assets/img/steps.svg">
-							<div class="content">
-
-								<p>Implement the roadmap initiatives for improvement.
+								<h3>Step 2</h3>
+								<p>Discover robust and well established in-market solutions that could be integrated
+									within the core ERP platform.
+									Alternatively, architect and design custom solution offering.
 
 								</p>
 							</div>
@@ -152,7 +132,11 @@
 						<div class="step">
 							<img src="../assets/img/steps.svg">
 							<div class="content">
-								sition with training and customer success.
+								<h3>Step 3</h3>
+								<p>Create an implementation roadmap after conducting process impact analysis, financial
+									impact analysis, and workflow
+									integrity testing.
+
 
 								</p>
 							</div>
@@ -162,8 +146,36 @@
 						<div class="step">
 							<img src="../assets/img/steps.svg">
 							<div class="content">
+								<h3>Step 4</h3>
+								<p>Implement micro-solutions to measure financial and qualitative performance changes.
+									Gather any solution improvements
+									that could be implemented in the next round of implementation.
 
-								<p>Measure impact, and go on the path continuous improvement.
+
+								</p>
+							</div>
+						</div>
+					</div>
+					<div class="col-md-4">
+						<div class="step">
+							<img src="../assets/img/steps.svg">
+							<div class="content">
+								<h3>Step 5</h3>
+								<p>Roll out larger solutions to further improve workflows throughout the operational
+									value chain of the enterprise.</p>
+
+								</p>
+							</div>
+						</div>
+					</div>
+					<div class="col-md-4">
+						<div class="step">
+							<img src="../assets/img/steps.svg">
+							<div class="content">
+								<h3>Step 6</h3>
+								<p>Continue to monitor, and measure impact to ensure that optimal output is experienced
+									post transformation initiatives.
+
 								</p>
 							</div>
 						</div>
@@ -178,7 +190,7 @@
 				<div class="row">
 					<div class="col-12 services-associate">
 						<div class="section-title">
-							<h2>Services associated with modernizing digital experience</h2>
+							<h2>Services associated with optimizing operations</h2>
 						</div>
 					</div>
 				</div>
@@ -186,13 +198,36 @@
 			<div class="container-fluid p-0">
 
 				<div class="row">
-					<!--service-1-->
-					<div class="bluebox">
-						<div class="bluebox d-block d-md-none">
-							<div class="imagecontent">
-								<img src="../assets/img/home/services/digital-tranformation.png">
-							</div>
+					<div class="bluebox d-block d-md-none">
+						<div class="imagecontent">
+							<img src="../assets/img/home/services/engineering-pods.png">
 						</div>
+					</div>
+					<div class="bluebox">
+						<div class="content">
+							<h3>Engineering Pods</h3>
+							<p>Harness the power of global teams to build velocity, agility, efficiency, and round the
+								clock support.
+								Our pods act as a
+								dedicated extended engineering team to your internal development efforts.
+							</p>
+							<a href="../services/engineering-pods.html" class="btn-learn-more stretched-link">
+								Learn More </a>
+						</div>
+					</div>
+					<div class="bluebox d-none d-md-block">
+						<div class="imagecontent">
+							<img src="../assets/img/home/services/engineering-pods.png">
+						</div>
+					</div>
+					<!--service-1-->
+
+					<div class="bluebox">
+						<div class="imagecontent">
+							<img src="../assets/img/home/services/digital-tranformation.png">
+						</div>
+					</div>
+					<div class="bluebox">
 						<div class="content">
 							<h3>Digital Transformation</h3>
 							<p>Digital First Organizations have experienced tremendous growth in the last decade. We
@@ -204,37 +239,11 @@
 								art digital technologies.
 							</p>
 							<a href="../services/digital-transformation.html" class="btn-learn-more stretched-link">
-								<i class="bi bi-arrow-right"></i> </a>
+								Learn More </a>
 						</div>
-					</div>
-					<div class="bluebox d-none d-md-block">
-						<div class="imagecontent">
-							<img src="../assets/img/home/services/digital-tranformation.png">
-						</div>
+
 					</div>
 
-					<!--end-->
-					<!--service-2-->
-					<div class="bluebox">
-						<div class="imagecontent">
-							<img src="../assets/img/home/services/product-development.png">
-						</div>
-					</div>
-					<div class="bluebox">
-						<div class="content">
-							<h3>Product Development</h3>
-							<p>Digital products, internal or consumer facing, have become a prominent source of
-								information
-								distribution today.
-								Enabling customer success, accelerating revenues, controlling costs are all possible
-								through appropriate
-								digital product
-								strategy, development and distribution.
-							</p>
-							<a href="../services/product-development.html" class="btn-learn-more stretched-link">
-								<i class="bi bi-arrow-right"></i> </a>
-						</div>
-					</div>
 					<!--end-->
 
 
@@ -249,7 +258,7 @@
 		<section class="cta">
 			<div class="container container-xs">
 				<div class="row content">
-					<div class="col-md-8">
+					<div class="col-md-8 align-self-center">
 						<h3>Connect with us to learn more</h3>
 					</div>
 					<div class="col-md-4 align-self-center">
