--- a/goals/transform-your-enterprise.html
+++ b/goals/transform-your-enterprise.html
@@ -69,11 +69,10 @@
 	<!-- ======= Hero Section ======= -->
 	<section id="banner" class="d-flex flex-column justify-content-end align-items-center p-0 goal-banner-6 ">
 		<div class="banner-container container enterprise">
-
 			<h1>Strategic Transformation
-
 			</h1>
-			<p>Leading Business transformation through high impact digital solutions.
+			<p>Leading business transformation through high impact digital solutions.
+
 
 			</p>
 		</div>
@@ -161,26 +160,16 @@
 				</div>
 				<div class="row content">
 					<div class="col-md-12">
-						<p>Technology is transforming business models around the globe. We help you rise to the
-							challenge and
-							discover new business
-							value by identifying opportunities to streamline workflows through automation,
-							productization and/or
-							digitization. We
-							build and implement a roadmap for transformation that drives efficiency, cost benefits and
-							competitive
-							advantage, in
-							line with your business goals.
-						</p>
-						<p>Our team collaborates with you to identify opportunities to streamline workflows through
-							automation,
-							productization
-							and/or digitization, in a way that makes the most sense for your business. We’ll help you
-							build and
-							implement a roadmap
-							for transformation so that you can scale your investments, improve your performance, and
-							make lives
-							easier.
+						<p>We understand and map your end to end business operations for each division in an assembly line view.
+							Identify
+							opportunities for improvement, and automation. Conduct an in-depth analysis on the potential impacts on
+							the business
+							from all aspects of executing the identified improvements. Create a roadmap with initiatives that have
+							high business
+							impact and forecasted positive returns on effort. Build and implement solutions, measure impact and
+							success, and
+							continue the improvement cycle.
+
 						</p>
 					</div>
 				</div>
@@ -189,8 +178,28 @@
 						<div class="step">
 							<img src="../assets/img/steps.svg">
 							<div class="content">
-
-								<p><b>Map</b> current operational and governance workflows of each business unit.
+								<h3>Step 1</h3>
+								<p>Discover and Map end to end business operations in an assembly line view.
+								</p>
+							</div>
+						</div>
+					</div>
+					<div class="col-md-4">
+						<div class="step">
+							<img src="../assets/img/steps.svg">
+							<div class="content">
+								<h3>Step 2</h3>
+								<p>Identify areas of improvement and automation.
+								</p>
+							</div>
+						</div>
+					</div>
+					<div class="col-md-4">
+						<div class="step">
+							<img src="../assets/img/steps.svg">
+							<div class="content">
+								<h3>Step 3</h3>
+								<p>Analyze business impact of identified areas of improvements.
 
 								</p>
 							</div>
@@ -200,8 +209,10 @@
 						<div class="step">
 							<img src="../assets/img/steps.svg">
 							<div class="content">
-
-								<p><b>Identify</b> steps that could be improved, automated, eliminated or digitized.
+								<h3>Step 4</h3>
+								<p>Create a roadmap with high to low impact initiatives that have positive anticipated results. Define
+									the success criteria
+									of each initiative.
 
 								</p>
 							</div>
@@ -211,9 +222,9 @@
 						<div class="step">
 							<img src="../assets/img/steps.svg">
 							<div class="content">
+								<h3>Step 5</h3>
+								<p>Build and implement initiatives on the roadmap.
 
-								<p><b>Define success</b>, evaluate impact, and conduct a cost benefit analysis for each
-									optimization.
 								</p>
 							</div>
 						</div>
@@ -222,28 +233,9 @@
 						<div class="step">
 							<img src="../assets/img/steps.svg">
 							<div class="content">
+								<h3>Step 6</h3>
+								<p>Measure impact, success and areas to improve the solution for the next phases of improvements.
 
-								<p><b>Create a roadmap</b> and establish key metrics for success.
-								</p>
-							</div>
-						</div>
-					</div>
-					<div class="col-md-4">
-						<div class="step">
-							<img src="../assets/img/steps.svg">
-							<div class="content">
-
-								<p><b>Develop</b>, and implement each action item.
-								</p>
-							</div>
-						</div>
-					</div>
-					<div class="col-md-4">
-						<div class="step">
-							<img src="../assets/img/steps.svg">
-							<div class="content">
-
-								<p><b>Measure impact</b>, test and improve.
 								</p>
 							</div>
 						</div>
@@ -259,7 +251,8 @@
 				<div class="row">
 					<div class="col-12 services-associate">
 						<div class="section-title">
-							<h2>Services associated with strategic transformation</h2>
+							<h2>Services associated with strategic transformation
+							</h2>
 						</div>
 					</div>
 				</div>
@@ -268,12 +261,13 @@
 
 				<div class="row">
 					<!--service-1-->
-					<div class="bluebox">
-						<div class="bluebox d-block d-md-none">
-							<div class="imagecontent">
-								<img src="../assets/img/home/services/digital-tranformation.png">
-							</div>
+
+					<div class="bluebox d-block d-md-none">
+						<div class="imagecontent">
+							<img src="../assets/img/home/services/digital-tranformation.png">
 						</div>
+					</div>
+					<div class="bluebox">
 						<div class="content">
 							<h3>Digital Transformation</h3>
 							<p>Digital First Organizations have experienced tremendous growth in the last decade. We
@@ -285,7 +279,7 @@
 								art digital technologies.
 							</p>
 							<a href="../services/digital-transformation.html" class="btn-learn-more stretched-link">
-								<i class="bi bi-arrow-right"></i> </a>
+								learn More </a>
 						</div>
 					</div>
 					<div class="bluebox d-none d-md-block">
@@ -303,10 +297,12 @@
 		<section class="cta">
 			<div class="container container-xs">
 				<div class="row content">
-					<div class="col-md-8">
-						<h3>Connect with us to learn more</h3>
+					<div class="col-lg-9 col-md-8 align-self-center">
+						<h3>Contact us to learn more about our methodologies, frameworks and processes used to deliver digital
+							success to
+							enterprises world over.</h3>
 					</div>
-					<div class="col-md-4 align-self-center">
+					<div class="col-lg-3 col-md-4 align-self-center">
 						<a href="../contact" class="btn-learn-more">Contact Us</a>
 					</div>
 				</div>
