--- a/index.html
+++ b/index.html
@@ -117,15 +117,12 @@
 							<h2>What we do.</h2>
 						</div>
 						<p>
-							We’re digital management consultants, product cartographers, experience designers, and
-							software engineers.
-							We believe
-							that digital transformation unlocks tremendous opportunities for growth.
-						</p>
-						<p>We assist enterprises plan and execute digital strategies that help you deliver seamless
-							experiences,
-							gain a competitive
-							edge, and future-proof your business.
+							We are digital management consultants, product cartographers, experience designers, and
+							software
+							engineers. We partner
+							with enterprises to assist them in conquering the digital world, and future proofing the
+							business.
+
 						</p>
 					</div>
 				</div>
@@ -137,12 +134,13 @@
 			<div class="container-fluid p-0">
 				<div class="row">
 					<!--service-1-->
-					<div class="bluebox">
-						<div class="bluebox d-block d-md-none">
-							<div class="imagecontent">
-								<img src="assets/img/home/services/digital-tranformation.png">
-							</div>
+
+					<div class="bluebox d-block d-md-none">
+						<div class="imagecontent">
+							<img src="assets/img/home/services/digital-tranformation.png">
 						</div>
+					</div>
+					<div class="bluebox">
 						<div class="content">
 							<h3>Digital Transformation</h3>
 							<p>Digital First Organizations have experienced tremendous growth in the last decade. We
@@ -154,7 +152,8 @@
 								art digital technologies.
 							</p>
 							<a href="services/digital-transformation.html" class="btn-learn-more stretched-link">
-								<i class="bi bi-arrow-right"></i> </a>
+								Learn More
+							</a>
 						</div>
 					</div>
 					<div class="bluebox d-none d-md-block">
@@ -173,17 +172,20 @@
 					<div class="bluebox">
 						<div class="content">
 							<h3>Product Development</h3>
-							<p>Digital products, internal or+ consumer facing, have become a prominent source of
-								information
-								distribution today.
-								Enabling customer success, accelerating revenues, controlling costs are all possible
-								through appropriate
-								digital product
-								strategy, development and distribution.
+							<p>Digital products have become a prominent source of information distribution today.
+								Strategically built
+								products enable
+								customer success, acceleration of revenues, controlling of costs. Torinit has
+								accumulated a
+								significant
+								body of
+								knowledge in the area of product development, and enabled many enterprises to build
+								better
+								products.
 
 							</p>
 							<a href="services/product-development.html" class="btn-learn-more stretched-link">
-								<i class="bi bi-arrow-right"></i> </a>
+								Learn More </a>
 						</div>
 					</div>
 					<!--end-->
@@ -196,17 +198,20 @@
 						</div>
 						<div class="content">
 							<h3>Experience Design</h3>
-							<p>Creating or improving meaningful experiential journeys for your customers, consumers,
+							<p>Creating meaningful experiences for your customers, consumers (often different from
+								customers), and
 								employees has a
-								direct correlation
-								with the health of your enterprise both financially and qualitatively. Invest in
-								seamless experiences to
-								realize the
-								true potential of their value chain.
+								direct correlation with the health of your enterprise; both financially and
+								qualitatively.
+								At Torinit,
+								we have built
+								state of the art design systems for various business applications that have benefited
+								our
+								customers.
 
 							</p>
 							<a href="services/experience-design.html" class="btn-learn-more stretched-link">
-								<i class="bi bi-arrow-right"></i> </a>
+								Learn More </a>
 						</div>
 					</div>
 					<div class="bluebox d-none d-md-block">
@@ -225,13 +230,13 @@
 						<div class="content">
 							<h3>Engineering Pods</h3>
 							<p>Harness the power of global teams to build velocity, agility, efficiency, and round the
-								clock support.
-								Our engineering
-								pods act as a dedicated extended engineering team to your internal development efforts.
-
+								clock
+								support.
+								Our pods act as a
+								dedicated extended engineering team to your internal development efforts.
 							</p>
 							<a href="services/engineering-pods.html" class="btn-learn-more stretched-link">
-								<i class="bi bi-arrow-right"></i> </a>
+								Learn More </a>
 						</div>
 					</div>
 					<!--end-->
@@ -251,7 +256,7 @@
 
 							</p>
 							<a href="services/cx-audits.html" class="btn-learn-more stretched-link">
-								<i class="bi bi-arrow-right"></i> </a>
+								Learn More </a>
 						</div>
 					</div>
 					<div class="bluebox d-none d-md-block">
@@ -276,7 +281,7 @@
 
 							</p>
 							<a href="services/technical-audits.html" class="btn-learn-more stretched-link">
-								<i class="bi bi-arrow-right"></i> </a>
+								Learn More </a>
 						</div>
 					</div> -->
 				</div>
@@ -291,19 +296,17 @@
 						<div class="section-title">
 							<h2>Who we are.</h2>
 						</div>
-						<p>Torinit exists to serve mid-market companies on their path to success. We’re more than
-							consultants —
-							we’re full partners
-							in your journey to solving critical business problems and charting desirable futures. We
-							pride ourselves
-							in becoming
-							incredibly attached to your projects, taking time to deeply understand your challenges and
-							building
-							empathy with your
-							consumers. We don’t believe in blanket solutions, but work relentlessly to deliver
-							customized services
-							that drive
-							transformational growth.
+						<p>Torinit exists to assist mid-market enterprises to shape their path to digitally enabled
+							success. We’re
+							more than
+							digital consultants - we’re full partners in your journey to solving critical business
+							challenges and
+							achieving
+							desirable success. We pride ourselves in becoming incredibly attached to your projects,
+							taking time to
+							deeply understand
+							your challenges.
+
 
 						</p>
 						<a href="about" class="btn-learn-more">LEARN MORE</a>
@@ -320,8 +323,6 @@
 						<h2>What is your goal today?
 						</h2>
 					</div>
-					<p>See how our services can help your vision come to life
-					</p>
 				</div>
 				<div class="row">
 					<div class="columnbox3">
@@ -336,9 +337,10 @@
 							<div class="content-details fadeIn-bottom">
 								<h3 class="content-title">Transform your enterprise
 								</h3>
-								<p class="content-text">Gain competitive advantage and improve your performance by
-									building a
-									future-facing culture.
+								<p class="content-text">Use digital platforms and tools to productize various parts of
+									your enterprise,
+									unlocking limitless scaling
+									opportunities and creating a competitive advantage over other players in the market.
 
 
 								</p>
@@ -358,9 +360,10 @@
 							<div class="content-details fadeIn-bottom">
 								<h3 class="content-title">Improve digital experiences
 								</h3>
-								<p class="content-text">Create exceptional experiences that delight your users and
-									streamline
-									operations, so that you can focus on what matters.
+								<p class="content-text">Create exceptional experiences that delight your customers,
+									consumers, and
+									employees to uplift your financial
+									performance, as well as brand value.
 
 
 								</p>
@@ -379,9 +382,10 @@
 							<div class="content-details fadeIn-bottom">
 								<h3 class="content-title">Accelerate sales
 								</h3>
-								<p class="content-text">Nurture lasting relationships and cultivate engagement by
-									refining end-to-end
-									customer journeys.
+								<p class="content-text">Take advantage of all digital distribution channels to
+									accelerate your sales
+									while providing your customers with a
+									unified service experience.
 
 
 								</p>
@@ -394,6 +398,7 @@
 							<div class="content-title">
 								<h3>Optimize operations
 
+
 								</h3>
 								<a href="goals/optimize-operations.html" class="stretched-link">
 									<img src="assets/img/icon/left-arrow-blue.svg">
@@ -403,9 +408,11 @@
 								<h3 class="content-title">Optimize operations
 
 								</h3>
-								<p class="content-text">Unlock efficiency and increase performance by reimagining your
-									operational model
-									with human-centricity at the core.
+								<p class="content-text">Explore digital options to automate or minimize human effort
+									while eliminating
+									errors throughout your value chain. Using
+									technology to assist employees has proven to be the most effective investment for
+									growing enterprises.
 
 								</p>
 							</div>
@@ -417,6 +424,7 @@
 							<div class="content-title">
 								<h3>Build better products
 
+
 								</h3>
 								<a href="goals/build-better-products.html" class="stretched-link">
 									<img src="assets/img/icon/left-arrow-blue.svg">
@@ -424,12 +432,15 @@
 							</div>
 							<div class="content-details fadeIn-bottom">
 								<h3 class="content-title">Build better products
-
 								</h3>
-								<p class="content-text">Uncover new sources of value and boost product development by
-									developing
-									consistent, highly effective and inspirational
-									experiences enabled by state-of-the-art design systems.
+								<p class="content-text">Deliver true value to your consumers by building products that
+									serve their core
+									purpose. Deeply understanding their
+									aspirations, and empathizing with their limitations help us assist enterprises in
+									building better
+									products for their
+									markets.
+
 
 
 								</p>
@@ -440,18 +451,21 @@
 						<div class="hoverbox">
 							<div class="content-overlay"></div>
 							<div class="content-title">
-								<h3>Build data intelligence
+								<h3>Build data Intelligence
+
 								</h3>
 								<a href="goals/build-data-intelligence.html" class="stretched-link">
 									<img src="assets/img/icon/left-arrow-blue.svg">
 								</a>
 							</div>
 							<div class="content-details fadeIn-bottom">
-								<h3 class="content-title">Build data intelligence
+								<h3 class="content-title">Build data Intelligence
+
 								</h3>
-								<p class="content-text">Create a data-driven culture that builds a competitive edge and
-									unlocks true
-									performance.
+								<p class="content-text">Create a data driven culture that builds a competitive advantage
+									for your sales,
+									operations, marketing, production,
+									logistics, and finance teams.
 								</p>
 							</div>
 						</div>
