--- a/services/digital-transformation.html
+++ b/services/digital-transformation.html
@@ -225,7 +225,7 @@
     </section>
     <!--End Torinit approach-->
 
-    <section class="overview">
+    <section class="overview pt-0 pb-0">
       <div class="container container-xs">
         <div class="row content">
           <div class="col-xl-12">
@@ -252,7 +252,7 @@
     <section class="cta">
       <div class="container container-xs">
         <div class="row content">
-          <div class="col-md-8">
+          <div class="col-md-8 align-self-center">
             <h3>Let’s work together
             </h3>
           </div>
