--- a/services/experience-design.html
+++ b/services/experience-design.html
@@ -154,7 +154,7 @@
 		</section>
 		<!--end The world around-->
 		<!--Torinit approach-->
-		<section class="approach">
+		<section class="approach pb-0">
 			<div class="container container-xs">
 				<div class="section-title">
 					<h2>Analyse, define, co-create.
@@ -245,7 +245,7 @@
 		<section class="cta">
 			<div class="container container-xs">
 				<div class="row content">
-					<div class="col-md-8">
+					<div class="col-md-8 align-self-center">
 						<h3>Let’s work together</h3>
 					</div>
 					<div class="col-md-4 align-self-center">
