--- a/services/technical-audits.html
+++ b/services/technical-audits.html
@@ -252,7 +252,7 @@
         <section class="cta">
             <div class="container container-xs">
                 <div class="row content">
-                    <div class="col-md-8">
+                    <div class="col-md-8 align-self-center">
                         <h3>Connect with us to learn more</h3>
                     </div>
                     <div class="col-md-4 align-self-center">
