--- a/goals/build-data-intelligence.html
+++ b/goals/build-data-intelligence.html
@@ -130,7 +130,8 @@
 		<section class="approach">
 			<div class="container container-xs">
 				<div class="section-title">
-					<h2>Our Approach to achieving actionable insights
+					<h2>Our approach to achieving actionable insights
+
 					</h2>
 				</div>
 				<div class="row content">
@@ -153,30 +154,10 @@
 						<div class="step">
 							<img src="../assets/img/steps.svg">
 							<div class="content">
-
-								<p>Map your data pipeline to review or uncover opportunities for data capture.
-
-								</p>
-							</div>
-						</div>
-					</div>
-					<div class="col-md-4">
-						<div class="step">
-							<img src="../assets/img/steps.svg">
-							<div class="content">
-
-								<p>Audit existing data sets to clean and consolidate data, allowing you to build new
-									layers of insights.
-								</p>
-							</div>
-						</div>
-					</div>
-					<div class="col-md-4">
-						<div class="step">
-							<img src="../assets/img/steps.svg">
-							<div class="content">
-
-								<p>Assess your legal and governance environment.
+								<h3> Step 1</h3>
+								<p>Review Raw Data & Data capture pipeline - Review existing data records, and
+									understand the sources from which data is
+									being captured.
 
 								</p>
 							</div>
@@ -186,33 +167,9 @@
 						<div class="step">
 							<img src="../assets/img/steps.svg">
 							<div class="content">
-
-								<p>Discover data opportunities based on your business goals.
-
-								</p>
-							</div>
-						</div>
-					</div>
-					<div class="col-md-4">
-						<div class="step">
-							<img src="../assets/img/steps.svg">
-							<div class="content">
-
-								<p>Build a holistic data strategy that generates actionable insights across the
-									stakeholder journey.
-
-								</p>
-							</div>
-						</div>
-					</div>
-
-					<div class="col-md-4">
-						<div class="step">
-							<img src="../assets/img/steps.svg">
-							<div class="content">
-
-								<p>Identify opportunities for enhancement through machine learning and artificial
-									intelligence.
+								<h3> Step 2</h3>
+								<p>Structure Data - Understand business cases, establish relationships between data
+									sets.
 
 								</p>
 							</div>
@@ -222,13 +179,44 @@
 						<div class="step">
 							<img src="../assets/img/steps.svg">
 							<div class="content">
-
-								<p>Implement and monitor success.
+								<h3> Step 3</h3>
+								<p>Data preprocessing - Sanitize and clean data sets to avoid any anomalies during the
+									analysis stage.
 
 								</p>
 							</div>
 						</div>
 					</div>
+					<div class="col-md-4">
+						<div class="step">
+							<img src="../assets/img/steps.svg">
+							<div class="content">
+								<h3> Step 4</h3>
+								<p>Data Analysis - Build analysis based on business needs to be able to create
+									hypotheses and action on it to be able to
+									create actionable insights.
+
+
+								</p>
+							</div>
+						</div>
+					</div>
+					<div class="col-md-4">
+						<div class="step">
+							<img src="../assets/img/steps.svg">
+							<div class="content">
+								<h3> Step 5</h3>
+								<p>Actionable Insights - use these insights as data driven actions that have a far
+									greater probability of success than
+									taking decisions based on singular experiences.
+
+
+								</p>
+							</div>
+						</div>
+					</div>
+
+
 				</div>
 			</div>
 			</div>
@@ -248,12 +236,13 @@
 
 				<div class="row">
 					<!--service-1-->
-					<div class="bluebox">
-						<div class="bluebox d-block d-md-none">
-							<div class="imagecontent">
-								<img src="../assets/img/home/services/digital-tranformation.png">
-							</div>
+
+					<div class="bluebox d-block d-md-none">
+						<div class="imagecontent">
+							<img src="../assets/img/home/services/digital-tranformation.png">
 						</div>
+					</div>
+					<div class="bluebox">
 						<div class="content">
 							<h3>Digital Transformation</h3>
 							<p>Digital First Organizations have experienced tremendous growth in the last decade. We
@@ -265,7 +254,7 @@
 								art digital technologies.
 							</p>
 							<a href="../services/digital-transformation.html" class="btn-learn-more stretched-link">
-								<i class="bi bi-arrow-right"></i> </a>
+								learn more </a>
 						</div>
 					</div>
 					<div class="bluebox d-none d-md-block">
@@ -283,7 +272,7 @@
 		<section class="cta">
 			<div class="container container-xs">
 				<div class="row content">
-					<div class="col-md-8">
+					<div class="col-md-8 align-self-center">
 						<h3>Connect with us to learn more</h3>
 					</div>
 					<div class="col-md-4 align-self-center">
