--- a/services/product-development.html
+++ b/services/product-development.html
@@ -147,7 +147,7 @@
 		</section>
 		<!--end The world around-->
 		<!--Torinit approach-->
-		<section class="approach">
+		<section class="approach pb-0">
 			<div class="container container-xs">
 				<div class="section-title">
 					<h2>Bringing your product to market
@@ -248,7 +248,7 @@
 		<section class="cta">
 			<div class="container container-xs">
 				<div class="row content">
-					<div class="col-md-8">
+					<div class="col-md-8 align-self-center">
 						<h3>Let’s work together
 						</h3>
 					</div>
